--- a/css/estilos.css
+++ b/css/estilos.css
@@ -61,14 +61,99 @@ body{
     color: var(--cor2);
     font-size: 1.5em;
 }
-.btn-registro > button{
+.btn-registro{
+    display: block;
+}
+.btn-registro > button, .btn-registro-mobile > button{
     background-color: var(--cor3);
     border: none;
     padding: 13px;
+    font-weight: bold;
     cursor: pointer;
     transition: all 500ms ease-in-out; 
 }
-.btn-registro > button{
+.btn-registro > button, .btn-registro-mobile > button{
     color: var(--cor2);
     font-size: 1em;
+}
+
+/* Menu mobile */
+.menu-mobile{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    background-color: var(--cor1);
+    opacity: 0;
+    position: absolute;
+    left: -600px;
+    width: 100%;
+    transition: all 500ms ease-in-out;
+}
+.menu-mobile > div, .menu-mobile > li{
+    margin: 15px 0;
+}
+.logo-grande > img{
+    width: 100%;
+}
+.linha{
+    border: .5px solid #ccc;
+}
+.menu-mobile > li{
+    margin: 10px 0;
+    padding: 10px 0;
+}
+.menu-mobile > li a{
+    color: var(--cor2);
+    font-weight: 100;
+    font-size: 1.6em;
+}
+.menu-mobile > li a::before{
+    content: '-';
+    margin: 0 3px;
+    font-weight: bold;
+    color: #d8101d;
+}
+.abrir-menu{
+    opacity: 1;
+    left: 0;
+}
+.idioma h3, .x-musk h3, .sobre-site h3{
+    color: var(--cor2);
+    font-size: 1.8em;
+}
+.idioma > div, .x-musk > div, .sobre-site > div{
+    background-color: transparent;
+    border: 1px solid #ccc;
+    width: 50%;
+    margin: 10px auto;
+    padding: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.idioma > div a, .x-musk > div a, .sobre-site > div a, .idioma > div i, .x-musk > div i, .sobre-site > div i{
+    margin-left: 4px;
+    color: var(--cor2);
+    font-size: 1em;
+}
+
+/* Dispositivos */
+/* Mobile */
+@media (min-width: 320px) and (max-width: 768px){
+    .menu-mobile{
+        display: block;
+    }
+}
+@media (min-width: 320px) and (max-width: 480px){
+    /* Botão de registre-se */
+    .btn-registro{
+        display: none;
+    }
+}
+
+/* Tablets */
+@media (min-width: 481px) and (max-width: 768px){
+    /* Botão de registre-se */
+
 }
