Ajustes do menu e implementação dos botões de seleção

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -86,7 +86,7 @@ body{
     background-color: var(--cor1);
     opacity: 0;
     position: absolute;
-    left: -600px;
+    left: -2000px;
     width: 100%;
     transition: all 500ms ease-in-out;
 }
@@ -138,6 +138,11 @@ body{
     font-size: 1em;
 }
 
+/* Seções */
+section{
+    padding: 0 60px;
+}
+
 /* Banner */
 .banner{
     background: url(../img/bg_re.jpg);
@@ -148,6 +153,38 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+/* Faixa dos controles */
+.faixa-controles{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--cor1);
+    border-top: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
+}
+.controles{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.controles > button{
+    padding: 40px;
+    width: 40%;
+    background-color: transparent;
+    border: none;
+    border-left: 1px solid #ccc;
+    border-right: 1px solid #ccc;
+    color: #cacaca;
+    font-size: 2em;
+    font-weight: 100;
+    cursor: pointer;
+    transition: all 500ms ease-in-out;
+}
+.controles > button:hover{
+    background-color: #d8101d;
 }
 
 /* Dispositivos */
